--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
-<h2 style="text-align: center;"><strong>COLONIAL TENIS OPEN</strong></h2>
-<p>&nbsp;</p>
-<p><strong>DECLARACION DE PRIVACIDAD </strong></p>
-<p>Recopilamos informaci&oacute;n personal para administrar nuestra relaci&oacute;n con usted y para promocionar y proporcionar nuestros productos y servicios.</p>
-<p>&nbsp;</p>
-<p>Cuando proporciona informaci&oacute;n personal, acepta que Colonial Open la utilizar&aacute; &uacute;nicamente para enviar informaci&oacute;n, noticias, invitaciones y otro material relevante al torneo. La informaci&oacute;n, las ofertas, las invitaciones y otro material de marketing directo pueden estar dirigidos directamente a usted y pueden tomar la forma de anuncios en l&iacute;nea.</p>
-<p>Respetamos tu privacidad. La informaci&oacute;n personal no ser&aacute; divulgada. Esto puede incluir la divulgaci&oacute;n a terceros, como nuestros proveedores de servicios, que pueden estar ubicados en el extranjero.</p>
-<p>La pol&iacute;tica de privacidad de tenis contiene informaci&oacute;n sobre c&oacute;mo puede acceder y solicitar la correcci&oacute;n de su informaci&oacute;n personal, c&oacute;mo puede presentar una queja sobre una violaci&oacute;n de su privacidad y c&oacute;mo se tratar&aacute; la queja. Tambi&eacute;n contiene informaci&oacute;n sobre c&oacute;mo puede optar por no recibir comunicaciones de marketing directo.</p>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Elements in HTML</title>
+  
+    <script src="https://unpkg.com/@stoplight/elements/web-components.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/@stoplight/elements/styles.min.css">
+  </head>
+  <body>
+
+    <elements-api
+      apiDescriptionUrl="eltest.yaml"
+      router="hash"
+    />
+
+  </body>
+</html>
